--- a/fed/index.html
+++ b/fed/index.html
@@ -1,1 +1,68 @@
+<html lang="zh-CN"><head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="johnny">
+    <title>反向代理</title>
+    <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+  </head>
 
+  <body>
+    <nav class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">反向代理配置</a>
+        </div>
+      </div>
+    </nav>
+    <div class="container" style="margin-top: 80px;">
+      <div data-example-id="striped-table">
+        <table class="table table-striped proxy-list-wrap">
+          <tr>
+            <th>#</th>
+            <th>域名</th>
+            <th>指向</th>
+            <th>操作</th>
+          </tr>
+        </table>
+      </div>
+      <hr>
+      <footer>
+        <p>© Company 2016</p>
+      </footer>
+    </div>
+    <script id="proxy_list" type="text/x-jquery-tmpl">
+    <tr>
+      <th>${id}</th>
+      <td>${domain}</td>
+      <td>${target_domain}</td>
+      <td>
+        <a href="#">编辑</a>
+        <a href="#">删除</a>
+      </td>
+    </tr>
+    </script>
+    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="./js/lib/jquery-tmpl.js"></script>
+    <script type="text/javascript">
+    $(function(){
+      $.ajax({
+        url: '/api/getproxy',
+        dataType: 'json',
+        method: 'GET',
+        success: function( data ) {
+          $("#proxy_list").tmpl(data).appendTo('.proxy-list-wrap');
+        }
+      });
+    });
+    </script>
+</body>
+</html>
