修改端口号

--- a/fed/index.html
+++ b/fed/index.html
@@ -41,7 +41,7 @@
     <script id="proxy_list" type="text/x-jquery-tmpl">
     <tr>
       <th>${id}</th>
-      <td>${domain}</td>
+      <td><a href="http://${domain}">${domain}</a></td>
       <td>${target_domain}</td>
       <td>
         <a href="#">编辑</a>
