--- a/fed/index.html
+++ b/fed/index.html
@@ -7,7 +7,6 @@
     <title>反向代理</title>
     <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
   </head>
-
   <body>
     <nav class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
@@ -24,6 +23,7 @@
     </nav>
     <div class="container" style="margin-top: 80px;">
       <div data-example-id="striped-table">
+        <button class="btn btn-primary" style="margin-bottom: 15px;" onclick="proxy.add()">添加配置</button>
         <table class="table table-striped proxy-list-wrap">
           <tr>
             <th>#</th>
@@ -38,14 +38,45 @@
         <p>© Company 2016</p>
       </footer>
     </div>
+    <!-- 配置表单模态框 -->
+    <div class="modal fade" id="proxyConfigForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="proxyConfigTitle"></h4>
+          </div>
+          <div class="modal-body">
+            <form id="config_form" class="form-horizontal">
+              <div class="form-group">
+                <label for="domain" class="col-sm-2 control-label">域名</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="domain" placeholder="请输入域名">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="target_domain" class="col-sm-2 control-label">指向</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="target_domain" placeholder="输入指向地址">
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="button" class="btn btn-primary" onclick="proxy.save()">保存</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script id="proxy_list" type="text/x-jquery-tmpl">
     <tr>
       <th>${id}</th>
       <td><a href="http://${domain}">${domain}</a></td>
       <td>${target_domain}</td>
       <td>
-        <a href="#">编辑</a>
-        <a href="#">删除</a>
+        <a href="javascript:void(0)" onclick="proxy.edit(${id})">编辑</a>
+        <a href="javascript:void(0)" onclick="proxy.delete(${id})">删除</a>
       </td>
     </tr>
     </script>
@@ -53,15 +84,85 @@
     <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="./js/lib/jquery-tmpl.js"></script>
     <script type="text/javascript">
-    $(function(){
-      $.ajax({
-        url: '/api/getproxy',
-        dataType: 'json',
-        method: 'GET',
-        success: function( data ) {
-          $("#proxy_list").tmpl(data).appendTo('.proxy-list-wrap');
+    var proxy = {
+      list : [],
+      currentProxy : {},
+      // 保存
+      save : function() {
+        // 重组数据
+        $.extend(this.currentProxy,{
+          domain : $('#domain').val(),
+          target_domain : $('#target_domain').val()
+        })
+        $.ajax({
+          url: '/api/postproxy',
+          data: this.currentProxy,
+          dataType: 'json',
+          method: 'POST',
+          success: function( data ) {
+            if( !data.error ) {
+              location.reload();
+            } else {
+              alert(data.message);
+            }
+          }
+        })
+      },
+      // 打开配置反向代理模态框
+      add : function(){
+        $('#proxyConfigTitle').text('添加配置');
+        $('#domain').val('');
+        $('#target_domain').val('');
+        $('#proxyConfigForm').modal('show');
+      },
+      // 编辑配置反向代理
+      edit : function( id ) {
+        this.currentProxy = this.getCurrentProxy( id );
+        $('#proxyConfigTitle').text('编辑配置');
+        $('#domain').val( this.currentProxy.domain );
+        $('#target_domain').val( this.currentProxy.target_domain );
+        $('#proxyConfigForm').modal('show');
+      },
+      // 删除
+      delete : function( id ) {
+        $.ajax({
+          url: '/api/deleteproxy',
+          data: {id: id},
+          dataType: 'json',
+          method: 'POST',
+          success: function( data ) {
+            if( !data.error ) {
+              location.reload();
+            } else {
+              alert( data.message );
+            }
+          }
+        })
+      },
+      getCurrentProxy : function ( id ) {
+        var current = undefined;
+        for (var i = 0; i < proxy.list.length; i++) {
+          if( id === proxy.list[i].id ){
+            current = proxy.list[i];
+          }
         }
-      });
+        return current;
+      },
+      // 获得列表
+      getProxyList : function () {
+        $.ajax({
+          url: '/api/getproxy',
+          dataType: 'json',
+          method: 'GET',
+          success: function( data ) {
+            proxy.list = data;
+            $("#proxy_list").tmpl(data).appendTo('.proxy-list-wrap');
+          }
+        });
+      }
+    };
+    $(function(){
+      proxy.getProxyList();
     });
     </script>
 </body>
