--- a/fed/index.html
+++ b/fed/index.html
@@ -98,7 +98,7 @@
           url: '/api/postproxy',
           data: this.currentProxy,
           dataType: 'json',
-          method: 'POST',
+          type: 'POST',
           success: function( data ) {
             if( !data.error ) {
               location.reload();
@@ -129,7 +129,7 @@
           url: '/api/deleteproxy',
           data: {id: id},
           dataType: 'json',
-          method: 'POST',
+          type: 'POST',
           success: function( data ) {
             if( !data.error ) {
               location.reload();
@@ -153,7 +153,7 @@
         $.ajax({
           url: '/api/getproxy',
           dataType: 'json',
-          method: 'GET',
+          type: 'GET',
           success: function( data ) {
             proxy.list = data;
             $("#proxy_list").tmpl(data).appendTo('.proxy-list-wrap');
